--- a/source/html/main/user/reg.html
+++ b/source/html/main/user/reg.html
@@ -11,8 +11,8 @@
 <script type="text/javascript" src="lib/html5shiv.js"></script>
 <script type="text/javascript" src="lib/respond.min.js"></script>
 <![endif]-->
-		<link rel="stylesheet" type="text/css" href="static/h-ui/css/H-ui.css" />
-		<link rel="stylesheet" type="text/css" href="lib/Hui-iconfont/1.0.8/iconfont.min.css" />
+		<link rel="stylesheet" type="text/css" href="../../ui-frame/static/h-ui/css/H-ui.css" />
+		<link rel="stylesheet" type="text/css" href="../../ui-frame/lib/Hui-iconfont/1.0.8/iconfont.min.css" />
 		<!--[if lt IE 9]>
 <link href="static/h-ui/css/H-ui.ie.css" rel="stylesheet" type="text/css" />
 <![endif]-->
@@ -91,13 +91,13 @@
 		</div>
 		</div>
 
-		<script type="text/javascript" src="lib/jquery/1.9.1/jquery.min.js"></script>
-		<script type="text/javascript" src="lib/jquery-ui/1.9.1/jquery-ui.min.js"></script>
-		<script type="text/javascript" src="static/h-ui/js/H-ui.js"></script>
-		<script type="text/javascript" src="lib/jquery.SuperSlide/2.1.1/jquery.SuperSlide.min.js"></script>
-		<script type="text/javascript" src="lib/jquery.validation/1.14.0/jquery.validate.min.js"></script>
-		<script type="text/javascript" src="lib/jquery.validation/1.14.0/validate-methods.js"></script>
-		<script type="text/javascript" src="lib/jquery.validation/1.14.0/messages_zh.min.js"></script>
+		<script type="text/javascript" src="../../ui-frame/lib/jquery/1.9.1/jquery.min.js"></script>
+		<script type="text/javascript" src="../../ui-frame/lib/jquery-ui/1.9.1/jquery-ui.min.js"></script>
+		<script type="text/javascript" src="../../ui-frame/static/h-ui/js/H-ui.js"></script>
+		<script type="text/javascript" src="../../ui-frame/lib/jquery.SuperSlide/2.1.1/jquery.SuperSlide.min.js"></script>
+		<script type="text/javascript" src="../../ui-frame/lib/jquery.validation/1.14.0/jquery.validate.min.js"></script>
+		<script type="text/javascript" src="../../ui-frame/lib/jquery.validation/1.14.0/validate-methods.js"></script>
+		<script type="text/javascript" src="../../ui-frame/lib/jquery.validation/1.14.0/messages_zh.min.js"></script>
 		<script>
 			//弹窗
 			function modaldemo() {
