--- a/source/html/main/user/login.html
+++ b/source/html/main/user/login.html
@@ -54,14 +54,21 @@
 										<input type="password" class="input-text" autocomplete="off" placeholder="密码" name="password" id="password">
 									</div>
 								</div>
+
 								<div class="row cl">
 									<div class="col-xs-8 col-xs-offset-3">
+										<span>
 										<input class="btn btn-primary" type="submit" value="&nbsp;&nbsp;登录&nbsp;&nbsp;">
-
+										</span>
+										<span></span>
+										<span>
+										<input class="btn btn-primary" type="button" name="Submit" onclick="javascript:history.back(-1);" value="&nbsp;&nbsp;返回上一页&nbsp;&nbsp;">
+										</span>
 									</div>
 								</div>
 
 							</form>
+
 							<form action="" method="post" class="form form-horizontal responsive" id="demoform">
 								<div class="row cl">
 									<div class="col-xs-8 col-xs-offset-3">
