--- a/source/html/main/user/reg.html
+++ b/source/html/main/user/reg.html
@@ -80,7 +80,12 @@
 								</div>
 								<div class="row cl">
 									<div class="col-xs-8 col-xs-offset-3">
+										<span>
 										<input class="btn btn-primary" type="submit" value="&nbsp;&nbsp;注册&nbsp;&nbsp;">
+										</span>
+										<span>
+										<input class="btn btn-primary" type="button" name="Submit" onclick="javascript:history.back(-1);" value="&nbsp;&nbsp;返回上一页&nbsp;&nbsp;">
+										</span>
 									</div>
 								</div>
 							</form>
