--- a/source/html/index.html
+++ b/source/html/index.html
@@ -39,7 +39,7 @@
 					<div class="container cl">
 						<a class="logo navbar-logo hidden-xs" href="main/user/login.html">Deepke</a>
 						<a class="logo navbar-logo-m visible-xs" href="#">Deepke</a>
-						<span class="logo navbar-slogan hidden-xs"> &middot;  &middot; </span>
+						<!-- span class="logo navbar-slogan hidden-xs"> &middot;  &middot; </span -->
 						<a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs JS-nav-toggle" href="javascript:;">&#xe667;</a>
 						<nav class="nav navbar-nav nav-collapse" role="navigation" id="Hui-navbar">
 							<ul class="cl">
