--- a/source/html/main/user/usersetup.html
+++ b/source/html/main/user/usersetup.html
@@ -24,24 +24,134 @@
 			<div class="containBox-bg"></div>
 			<div class="wap-container">
 				<div class="container ui-sortable">
-					<p> ---- </p>
+					<div class="panel-body">
+						<form action="" method="post" class="form form-horizontal responsive" id="demoform">
+							<div class="row cl">
+								<label class="form-label col-xs-3">妮名：</label>
+								<div class="formControls col-xs-8">
+									<input type="text" class="input-text" placeholder="4~16个字符，字母/中文/数字/下划线" name="username" id="username">
+								</div>
+							</div>
+
+							<div class="row cl">
+								<label class="form-label col-xs-3">手机：</label>
+								<div class="formControls col-xs-8">
+									<input type="text" class="input-text" autocomplete="off" placeholder="手机" name="telephone" id="telephone">
+								</div>
+							</div>
+
+							<div class="row cl">
+								<label class="form-label col-xs-3">邮箱：</label>
+								<div class="formControls col-xs-8">
+									<input type="text" class="input-text" placeholder="@" name="email" id="email" autocomplete="off">
+								</div>
+							</div>
+
+							<div class="row cl">
+								<label class="form-label col-xs-3">性别：</label>
+								<div class="formControls skin-minimal col-xs-5">
+									<div class="radio-box">
+										<input type="radio" id="sex-1" name="sex">
+										<label for="sex-1">男</label>
+									</div>
+									<div class="radio-box">
+										<input type="radio" id="sex-2" name="sex">
+										<label for="sex-2">女</label>
+									</div>
+									<div class="radio-box">
+										<input type="radio" id="sex-3" name="sex">
+										<label for="sex-3">保密</label>
+									</div>
+								</div>
+							</div>
+							<div class="row cl">
+								<label class="form-label col-xs-3">出生日期：</label>
+								<div class="formControls col-xs-8">
+									<input type="text" class="input-text" value="" autocomplete="off" id="datetimepicker" name="datetimepicker">
+								</div>
+							</div>
+							<div class="row cl">
+								<label class="form-label col-xs-3">爱好：</label>
+								<div class="formControls skin-minimal col-xs-5">
+									<div class="check-box">
+										<input type="checkbox" id="checkbox-5" name="checkbox2">
+										<label for="checkbox-5">上网</label>
+									</div>
+									<div class="check-box">
+										<input type="checkbox" id="checkbox-6" name="checkbox2">
+										<label for="checkbox-6">摄影</label>
+									</div>
+								</div>
+							</div>
+
+							<div class="row clearfix">
+								<label class="form-label col-xs-3">所在城市：</label>
+								<div class="formControls col-xs-8">
+									<div class="row clearfix" style="margin-top:0">
+										<div class="col-xs-6">
+											<span class="select-box">
+															<select class="select" size="1" name="city">
+																<option value="" selected>选择省份</option>
+																<option value="1">北京</option>
+																<option value="2">上海</option>
+																<option value="3">广州</option>
+															</select>
+															</span>
+										</div>
+										<div class="col-xs-6">
+											<span class="select-box">
+															<select class="select" size="1" name="city">
+																<option value="" selected>选择城市</option>
+																<option value="1">北京</option>
+																<option value="2">上海</option>
+																<option value="3">广州</option>
+															</select>
+															</span>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="row cl">
+								<label class="form-label col-xs-3">网址：</label>
+								<div class="formControls col-xs-8">
+									<input type="text" class="input-text" placeholder="http://" name="website" id="website">
+								</div>
+							</div>
+							<div class="row cl">
+								<label class="form-label col-xs-3">个人简介：</label>
+								<div class="formControls col-xs-8">
+									<textarea cols="" rows="" class="textarea" name="beizhu" id="beizhu" placeholder="说点什么...最少输入10个字符"></textarea>
+								</div>
+							</div>
+							<div class="row cl">
+								<div class="col-xs-8 col-xs-offset-3">
+									<span>
+									<input class="btn btn-primary" type="submit" value="&nbsp;&nbsp;提交&nbsp;&nbsp;">
+									</span>
+									<span>
+									<input class="btn btn-primary" type="button" name="Submit" onclick="javascript:history.back(-1);" value="&nbsp;&nbsp;返回上一页&nbsp;&nbsp;">
+									</span>
+								</div>
+							</div>
+						</form>
+					</div>
 				</div>
-				
+
 				<div class="container ui-sortable">
 					<p> ---- </p>
 				</div>
-				
+
 				<footer class="footer mt-20">
 					<div class="container">
 						<nav class="footer-nav">
-							<a target="_blank" href="http://www.h-ui.net/aboutHui.shtml">关于H-ui</a>
+							<a target="_blank" href="#">关于H-ui</a>
 							<span class="pipe">|</span>
-							<a target="_blank" href="http://www.h-ui.net/copyright.shtml">软件著作权</a>
+							<a target="_blank" href="#">软件著作权</a>
 							<span class="pipe">|</span>
-							<a target="_blank" href="http://www.h-ui.net/juanzeng.shtml">感谢捐赠</a>
+							<a target="_blank" href="#">感谢捐赠</a>
 						</nav>
 						<p>Copyright &copy;2013-2017 H-ui.net All Rights Reserved. <br>
-							<a rel="nofollow" target="_blank" href="http://www.miitbeian.gov.cn/">京ICP备15015336号-1</a>
+							<a rel="nofollow" target="_blank" href="#">京ICP备xxxxxx号</a>
 							<br> 未经允许，禁止转载、抄袭、镜像
 							<br> 用心做站，做不一样的站
 						</p>
