--- a/source/html/main/user/login.html
+++ b/source/html/main/user/login.html
@@ -78,7 +78,7 @@
 						</div>
 						<div class="panel-header">
 							<a id='reg' href="reg.html">注册账号</a> <span class="spliter">|</span>
-							<a id='forgetPassword' href="forget_password.html">忘记密码</a>
+							<a id='forgetPassword' href="forget_password.html">忘密码，找回密码?</a>
 						</div>
 						<form action="" method="post" class="form form-horizontal responsive" id="demoform">
 						</form>
