--- a/source/html/index.html
+++ b/source/html/index.html
@@ -37,7 +37,7 @@
 			<header class="navbar-wrapper">
 				<div class="navbar navbar-black navbar-fixed-top">
 					<div class="container cl">
-						<a class="logo navbar-logo hidden-xs" href="main/user/login.html">Deepke</a>
+						<a class="logo navbar-logo hidden-xs" href="#">Deepke</a>
 						<a class="logo navbar-logo-m visible-xs" href="#">Deepke</a>
 						<!-- span class="logo navbar-slogan hidden-xs"> &middot;  &middot; </span -->
 						<a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs JS-nav-toggle" href="javascript:;">&#xe667;</a>
