--- a/source/html/main/user/usersetup.html
+++ b/source/html/main/user/usersetup.html
@@ -88,26 +88,14 @@
 								<label class="form-label col-xs-3">所在城市：</label>
 								<div class="formControls col-xs-8">
 									<div class="row clearfix" style="margin-top:0">
+									
 										<div class="col-xs-6">
-											<span class="select-box">
-															<select class="select" size="1" name="city">
-																<option value="" selected>选择省份</option>
-																<option value="1">北京</option>
-																<option value="2">上海</option>
-																<option value="3">广州</option>
-															</select>
-															</span>
+											<span class="select-box" id="area1"></span>
 										</div>
 										<div class="col-xs-6">
-											<span class="select-box">
-															<select class="select" size="1" name="city">
-																<option value="" selected>选择城市</option>
-																<option value="1">北京</option>
-																<option value="2">上海</option>
-																<option value="3">广州</option>
-															</select>
-															</span>
+											<span class="select-box" id="area2"></span>
 										</div>
+										
 									</div>
 								</div>
 							</div>
@@ -157,9 +145,8 @@
 						</p>
 					</div>
 				</footer>
-
 			</div>
-
+			<script type="text/javascript" src="../../ui-frame/lib/citylist/address.js"></script>
 			<script type="text/javascript" src="../../ui-frame/lib/jquery/1.9.1/jquery.min.js"></script>
 			<script type="text/javascript" src="../../ui-frame/lib/jquery-ui/1.9.1/jquery-ui.min.js"></script>
 			<script type="text/javascript" src="../../ui-frame/static/h-ui/js/H-ui.js"></script>
