--- a/source/html/main/user/login.html
+++ b/source/html/main/user/login.html
@@ -7,31 +7,54 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 		<meta http-equiv="Cache-Control" content="no-siteapp" />
-		<!--[if lt IE 9]>
-<script type="text/javascript" src="lib/html5shiv.js"></script>
-<script type="text/javascript" src="lib/respond.min.js"></script>
-<![endif]-->
 		<link rel="stylesheet" type="text/css" href="../../ui-frame/static/h-ui/css/H-ui.css" />
 		<link rel="stylesheet" type="text/css" href="../../ui-frame/lib/Hui-iconfont/1.0.8/iconfont.min.css" />
-		<!--[if lt IE 9]>
-<link href="static/h-ui/css/H-ui.ie.css" rel="stylesheet" type="text/css" />
-<![endif]-->
-		<!--[if IE 6]>
-<script type="text/javascript" src="lib/DD_belatedPNG_0.0.8a-min.js" ></script>
-<script>DD_belatedPNG.fix('*');</script>
-<![endif]-->
-		<style type="text/css">
-			.ui-sortable .panel-header {
-				cursor: move
-			}
-		</style>
+
 		<title>登录</title>
 	</head>
+
+	<div class="sideBox">
+		<ul class="nav navbar-nav pt-20">
+			<li>
+				<a href="main/user/login.html">登录/注册</a>
+			</li>
+			<li>
+				<a href="#src/about/">关于我们</a>
+			</li>
+		</ul>
+	</div>
 
 	<body ontouchstart>
 		<div class="containBox">
 			<div class="containBox-bg"></div>
-
+			<!-- 导航栏的头部设计 -->
+			<header class="navbar-wrapper">
+				<div class="navbar navbar-black navbar-fixed-top">
+					<div class="container cl">
+						<a class="logo navbar-logo hidden-xs" href="#">Deepke</a>
+						<a class="logo navbar-logo-m visible-xs" href="#">Deepke</a>
+						<!-- span class="logo navbar-slogan hidden-xs"> &middot;  &middot; </span -->
+						<a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs JS-nav-toggle" href="javascript:;">&#xe667;</a>
+						<nav class="nav navbar-nav nav-collapse" role="navigation" id="Hui-navbar">
+							<ul class="cl">
+								<li class="current">
+									<a href="index.html" target="_blank">首页</a>
+								</li>
+								<li>
+									<a href="main/blog/blog.html" target="_blank">博客</a>
+								</li>
+								<li>
+									<a href="#src/about/" target="_blank">关于我们</a>
+								</li>
+								<li valign="left" style="float:right;">
+									<a href="main/user/login.html">登录/注册</a>
+								</li>
+							</ul>
+						</nav>
+						<nav class="navbar-userbar hidden-xs"></nav>
+					</div>
+				</div>
+			</header>
 			<div class="wap-container">
 
 				<div class="container ui-sortable">
@@ -60,15 +83,12 @@
 										<span>
 										<input class="btn btn-primary" type="submit" value="&nbsp;&nbsp;登录&nbsp;&nbsp;">
 										</span>
-										<span></span>
 										<span>
 										<input class="btn btn-primary" type="button" name="Submit" onclick="javascript:history.back(-1);" value="&nbsp;&nbsp;返回上一页&nbsp;&nbsp;">
 										</span>
 									</div>
 								</div>
-
 							</form>
-
 							<form action="" method="post" class="form form-horizontal responsive" id="demoform">
 								<div class="row cl">
 									<div class="col-xs-8 col-xs-offset-3">
@@ -119,7 +139,7 @@
 					pnLoop: false,
 					titOnClassName: "active"
 				});
-				
+
 				//邮箱提示	
 				$("#email").emailsuggest();
 
@@ -233,18 +253,6 @@
 						$("#result-1").html('你的评分是' + score + '分');
 					}
 				});
-
-				$(".ui-sortable").sortable({
-					//connectWith: ".panel",
-					items: ".panel",
-					handle: ".panel-header",
-					//delay: 300, //时间延迟
-					//distance: 15, //距离延迟
-					placeholder: "ui-state-highlight", //占位符样式
-					update: function(event, ui) {
-
-					}
-				}).disableSelection();
 
 				var _bodyHeight = $(window).height();
 				var _doch = $(document).height();
