--- a/source/html/main/user/usersetup.html
+++ b/source/html/main/user/usersetup.html
@@ -9,19 +9,52 @@
 		<meta http-equiv="Cache-Control" content="no-siteapp" />
 		<link rel="stylesheet" type="text/css" href="../../ui-frame/static/h-ui/css/H-ui.css" />
 		<link rel="stylesheet" type="text/css" href="../../ui-frame/lib/Hui-iconfont/1.0.8/iconfont.min.css" />
-		<style type="text/css">
-			.ui-sortable .panel-header {
-				cursor: move
-			}
-		</style>
-		<title>Hi，H-ui v3.1</title>
+		<title>个人信息</title>
 		<meta name="keywords" content="关键词,5个左右,单个8汉字以内">
 		<meta name="description" content="网站描述，字数尽量空制在80个汉字，160个字符以内！">
 	</head>
+	<div class="sideBox">
+		<ul class="nav navbar-nav pt-20">
+			<li>
+				<a href="main/user/login.html">登录/注册</a>
+			</li>
+			<li>
+				<a href="#src/about/">关于我们</a>
+			</li>
+		</ul>
+	</div>
 
 	<body ontouchstart>
 		<div class="containBox">
 			<div class="containBox-bg"></div>
+			<!-- 导航栏的头部设计 -->
+			<header class="navbar-wrapper">
+				<div class="navbar navbar-black navbar-fixed-top">
+					<div class="container cl">
+						<a class="logo navbar-logo hidden-xs" href="#">Deepke</a>
+						<a class="logo navbar-logo-m visible-xs" href="#">Deepke</a>
+						<!-- span class="logo navbar-slogan hidden-xs"> &middot;  &middot; </span -->
+						<a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs JS-nav-toggle" href="javascript:;">&#xe667;</a>
+						<nav class="nav navbar-nav nav-collapse" role="navigation" id="Hui-navbar">
+							<ul class="cl">
+								<li class="current">
+									<a href="index.html" target="_blank">首页</a>
+								</li>
+								<li>
+									<a href="main/blog/blog.html" target="_blank">博客</a>
+								</li>
+								<li>
+									<a href="#src/about/" target="_blank">关于我们</a>
+								</li>
+								<li valign="left" style="float:right;">
+									<a href="main/user/login.html">登录/注册</a>
+								</li>
+							</ul>
+						</nav>
+						<nav class="navbar-userbar hidden-xs"></nav>
+					</div>
+				</div>
+			</header>
 			<div class="wap-container">
 				<div class="container ui-sortable">
 					<div class="panel-body">
@@ -88,14 +121,14 @@
 								<label class="form-label col-xs-3">所在城市：</label>
 								<div class="formControls col-xs-8">
 									<div class="row clearfix" style="margin-top:0">
-									
+
 										<div class="col-xs-6">
 											<span class="select-box" id="area1"></span>
 										</div>
 										<div class="col-xs-6">
 											<span class="select-box" id="area2"></span>
 										</div>
-										
+
 									</div>
 								</div>
 							</div>
@@ -301,18 +334,6 @@
 							$("#result-1").html('你的评分是' + score + '分');
 						}
 					});
-
-					$(".ui-sortable").sortable({
-						//connectWith: ".panel",
-						items: ".panel",
-						handle: ".panel-header",
-						//delay: 300, //时间延迟
-						//distance: 15, //距离延迟
-						placeholder: "ui-state-highlight", //占位符样式
-						update: function(event, ui) {
-
-						}
-					}).disableSelection();
 
 					var _bodyHeight = $(window).height();
 					var _doch = $(document).height();
