--- a/source/html/main/user/login.html
+++ b/source/html/main/user/login.html
@@ -16,7 +16,7 @@
 	<div class="sideBox">
 		<ul class="nav navbar-nav pt-20">
 			<li>
-				<a href="main/user/login.html">登录/注册</a>
+				<a href="main/user/login.html">登录  | 注册</a>
 			</li>
 			<li>
 				<a href="#src/about/">关于我们</a>
@@ -37,7 +37,7 @@
 						<a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs JS-nav-toggle" href="javascript:;">&#xe667;</a>
 						<nav class="nav navbar-nav nav-collapse" role="navigation" id="Hui-navbar">
 							<ul class="cl">
-								<li class="current">
+								<li>
 									<a href="index.html" target="_blank">首页</a>
 								</li>
 								<li>
@@ -47,7 +47,7 @@
 									<a href="#src/about/" target="_blank">关于我们</a>
 								</li>
 								<li valign="left" style="float:right;">
-									<a href="main/user/login.html">登录/注册</a>
+									<a href="main/user/login.html">登录  | 注册</a>
 								</li>
 							</ul>
 						</nav>
@@ -55,15 +55,13 @@
 					</div>
 				</div>
 			</header>
+			<p></p>
 			<div class="wap-container">
-
 				<div class="container ui-sortable">
-					<h1>hi,deepke</h1>
 					<div class="panel panel-default">
 						<div class="panel-header">登录</div>
 						<div class="panel-body">
 							<form action="" method="post" class="form form-horizontal responsive" id="demoform">
-
 								<div class="row cl">
 									<label class="form-label col-xs-3">用户名：</label>
 									<div class="formControls col-xs-8">
