--- a/source/html/main/user/usersetup.html
+++ b/source/html/main/user/usersetup.html
@@ -16,7 +16,7 @@
 	<div class="sideBox">
 		<ul class="nav navbar-nav pt-20">
 			<li>
-				<a href="main/user/login.html">登录/注册</a>
+				<a href="main/user/login.html">登录 | 注册</a>
 			</li>
 			<li>
 				<a href="#src/about/">关于我们</a>
@@ -37,7 +37,7 @@
 						<a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs JS-nav-toggle" href="javascript:;">&#xe667;</a>
 						<nav class="nav navbar-nav nav-collapse" role="navigation" id="Hui-navbar">
 							<ul class="cl">
-								<li class="current">
+								<li>
 									<a href="index.html" target="_blank">首页</a>
 								</li>
 								<li>
@@ -47,7 +47,7 @@
 									<a href="#src/about/" target="_blank">关于我们</a>
 								</li>
 								<li valign="left" style="float:right;">
-									<a href="main/user/login.html">登录/注册</a>
+									<a href="main/user/login.html">登录 | 注册</a>
 								</li>
 							</ul>
 						</nav>
@@ -55,111 +55,112 @@
 					</div>
 				</div>
 			</header>
+			<p></p>
 			<div class="wap-container">
-				<div class="container ui-sortable">
-					<div class="panel-body">
-						<form action="" method="post" class="form form-horizontal responsive" id="demoform">
-							<div class="row cl">
-								<label class="form-label col-xs-3">妮名：</label>
-								<div class="formControls col-xs-8">
-									<input type="text" class="input-text" placeholder="4~16个字符，字母/中文/数字/下划线" name="username" id="username">
-								</div>
-							</div>
-
-							<div class="row cl">
-								<label class="form-label col-xs-3">手机：</label>
-								<div class="formControls col-xs-8">
-									<input type="text" class="input-text" autocomplete="off" placeholder="手机" name="telephone" id="telephone">
-								</div>
-							</div>
-
-							<div class="row cl">
-								<label class="form-label col-xs-3">邮箱：</label>
-								<div class="formControls col-xs-8">
-									<input type="text" class="input-text" placeholder="@" name="email" id="email" autocomplete="off">
-								</div>
-							</div>
-
-							<div class="row cl">
-								<label class="form-label col-xs-3">性别：</label>
-								<div class="formControls skin-minimal col-xs-5">
-									<div class="radio-box">
-										<input type="radio" id="sex-1" name="sex">
-										<label for="sex-1">男</label>
-									</div>
-									<div class="radio-box">
-										<input type="radio" id="sex-2" name="sex">
-										<label for="sex-2">女</label>
-									</div>
-									<div class="radio-box">
-										<input type="radio" id="sex-3" name="sex">
-										<label for="sex-3">保密</label>
+				<div class="containBox-bg"></div>
+				<div class="panel panel-default">
+					<div class="panel-header">修改个人资料</div>
+					<div class="container ui-sortable">
+						<div class="panel-body">
+							<form action="" method="post" class="form form-horizontal responsive" id="demoform">
+								<div class="row cl">
+									<label class="form-label col-xs-3">妮名：</label>
+									<div class="formControls col-xs-8">
+										<input type="text" class="input-text" placeholder="4~16个字符，字母/中文/数字/下划线" name="username" id="username">
 									</div>
 								</div>
-							</div>
-							<div class="row cl">
-								<label class="form-label col-xs-3">出生日期：</label>
-								<div class="formControls col-xs-8">
-									<input type="text" class="input-text" value="" autocomplete="off" id="datetimepicker" name="datetimepicker">
-								</div>
-							</div>
-							<div class="row cl">
-								<label class="form-label col-xs-3">爱好：</label>
-								<div class="formControls skin-minimal col-xs-5">
-									<div class="check-box">
-										<input type="checkbox" id="checkbox-5" name="checkbox2">
-										<label for="checkbox-5">上网</label>
-									</div>
-									<div class="check-box">
-										<input type="checkbox" id="checkbox-6" name="checkbox2">
-										<label for="checkbox-6">摄影</label>
+
+								<div class="row cl">
+									<label class="form-label col-xs-3">手机：</label>
+									<div class="formControls col-xs-8">
+										<input type="text" class="input-text" autocomplete="off" placeholder="手机" name="telephone" id="telephone">
 									</div>
 								</div>
-							</div>
 
-							<div class="row clearfix">
-								<label class="form-label col-xs-3">所在城市：</label>
-								<div class="formControls col-xs-8">
-									<div class="row clearfix" style="margin-top:0">
+								<div class="row cl">
+									<label class="form-label col-xs-3">邮箱：</label>
+									<div class="formControls col-xs-8">
+										<input type="text" class="input-text" placeholder="@" name="email" id="email" autocomplete="off">
+									</div>
+								</div>
 
-										<div class="col-xs-6">
-											<span class="select-box" id="area1"></span>
+								<div class="row cl">
+									<label class="form-label col-xs-3">性别：</label>
+									<div class="formControls skin-minimal col-xs-5">
+										<div class="radio-box">
+											<input type="radio" id="sex-1" name="sex">
+											<label for="sex-1">男</label>
 										</div>
-										<div class="col-xs-6">
-											<span class="select-box" id="area2"></span>
+										<div class="radio-box">
+											<input type="radio" id="sex-2" name="sex">
+											<label for="sex-2">女</label>
 										</div>
-
+										<div class="radio-box">
+											<input type="radio" id="sex-3" name="sex">
+											<label for="sex-3">保密</label>
+										</div>
 									</div>
 								</div>
-							</div>
-							<div class="row cl">
-								<label class="form-label col-xs-3">网址：</label>
-								<div class="formControls col-xs-8">
-									<input type="text" class="input-text" placeholder="http://" name="website" id="website">
+								<div class="row cl">
+									<label class="form-label col-xs-3">出生日期：</label>
+									<div class="formControls col-xs-8">
+										<input type="text" class="input-text" value="" autocomplete="off" id="datetimepicker" name="datetimepicker">
+									</div>
 								</div>
-							</div>
-							<div class="row cl">
-								<label class="form-label col-xs-3">个人简介：</label>
-								<div class="formControls col-xs-8">
-									<textarea cols="" rows="" class="textarea" name="beizhu" id="beizhu" placeholder="说点什么...最少输入10个字符"></textarea>
+								<div class="row cl">
+									<label class="form-label col-xs-3">爱好：</label>
+									<div class="formControls skin-minimal col-xs-5">
+										<div class="check-box">
+											<input type="checkbox" id="checkbox-5" name="checkbox2">
+											<label for="checkbox-5">上网</label>
+										</div>
+										<div class="check-box">
+											<input type="checkbox" id="checkbox-6" name="checkbox2">
+											<label for="checkbox-6">摄影</label>
+										</div>
+									</div>
 								</div>
-							</div>
-							<div class="row cl">
-								<div class="col-xs-8 col-xs-offset-3">
-									<span>
+
+								<div class="row clearfix">
+									<label class="form-label col-xs-3">所在城市：</label>
+									<div class="formControls col-xs-8">
+										<div class="row clearfix" style="margin-top:0">
+
+											<div class="col-xs-6">
+												<span class="select-box" id="area1"></span>
+											</div>
+											<div class="col-xs-6">
+												<span class="select-box" id="area2"></span>
+											</div>
+
+										</div>
+									</div>
+								</div>
+								<div class="row cl">
+									<label class="form-label col-xs-3">网址：</label>
+									<div class="formControls col-xs-8">
+										<input type="text" class="input-text" placeholder="http://" name="website" id="website">
+									</div>
+								</div>
+								<div class="row cl">
+									<label class="form-label col-xs-3">个人简介：</label>
+									<div class="formControls col-xs-8">
+										<textarea cols="" rows="" class="textarea" name="beizhu" id="beizhu" placeholder="说点什么...最少输入10个字符"></textarea>
+									</div>
+								</div>
+								<div class="row cl">
+									<div class="col-xs-8 col-xs-offset-3">
+										<span>
 									<input class="btn btn-primary" type="submit" value="&nbsp;&nbsp;提交&nbsp;&nbsp;">
 									</span>
-									<span>
+										<span>
 									<input class="btn btn-primary" type="button" name="Submit" onclick="javascript:history.back(-1);" value="&nbsp;&nbsp;返回上一页&nbsp;&nbsp;">
 									</span>
+									</div>
 								</div>
-							</div>
-						</form>
+							</form>
+						</div>
 					</div>
-				</div>
-
-				<div class="container ui-sortable">
-					<p> ---- </p>
 				</div>
 
 				<footer class="footer mt-20">
@@ -211,16 +212,7 @@
 						pnLoop: false,
 						titOnClassName: "active"
 					});
-
-					$(".panel").Huifold({
-						titCell: '.panel-header',
-						mainCell: '.panel-body',
-						type: 1,
-						trigger: 'click',
-						className: "selected",
-						speed: "first",
-					});
-
+					
 					//邮箱提示	
 					$("#email").emailsuggest();
 
