--- a/source/html/index.html
+++ b/source/html/index.html
@@ -44,7 +44,7 @@
 									<a href="main/blog/blog.html" target="_blank">博客</a>
 								</li>
 								<li>
-									<a href="#src/about/" target="_blank">关于我们</a>
+									<a href="main/about/about.html" target="_blank">关于我们</a>
 								</li>
 								<li valign="left" style="float:right;">
 									<a href="main/user/login.html">登录/注册</a>
