--- a/source/html/main/about/about.html
+++ b/source/html/main/about/about.html
@@ -7,26 +7,27 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 		<meta http-equiv="Cache-Control" content="no-siteapp" />
+
 		<link rel="stylesheet" type="text/css" href="../../ui-frame/static/h-ui/css/H-ui.css" />
 		<link rel="stylesheet" type="text/css" href="../../ui-frame/lib/Hui-iconfont/1.0.8/iconfont.min.css" />
-
-		<title>登录</title>
+		<title>博客</title>
 	</head>
 
-	<div class="sideBox">
-		<ul class="nav navbar-nav pt-20">
-			<li>
-				<a href="login.html">登录  | 注册</a>
-			</li>
-			<li>
-				<a href="#src/about/">关于我们</a>
-			</li>
-		</ul>
-	</div>
-
 	<body ontouchstart>
+		<div class="sideBox">
+			<ul class="nav navbar-nav pt-20">
+				<li>
+					<a href="../user/login.html">登录  | 注册</a>
+				</li>
+				<li>
+					<a href="about.html">关于我们</a>
+				</li>
+			</ul>
+		</div>
+
 		<div class="containBox">
 			<div class="containBox-bg"></div>
+
 			<!-- 导航栏的头部设计 -->
 			<header class="navbar-wrapper">
 				<div class="navbar navbar-black navbar-fixed-top">
@@ -37,14 +38,14 @@
 						<a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs JS-nav-toggle" href="javascript:;">&#xe667;</a>
 						<nav class="nav navbar-nav nav-collapse" role="navigation" id="Hui-navbar">
 							<ul class="cl">
-								<li>
-									<a href="index.html" target="_blank">首页</a>
+								<li >
+									<a href="../../index.html" target="_blank">首页</a>
 								</li>
 								<li>
-									<a href="main/blog/blog.html" target="_blank">博客</a>
+									<a href="../blog/blog.html" target="_blank">博客</a>
 								</li>
-								<li>
-									<a href="#src/about/" target="_blank">关于我们</a>
+								<li  class="current">
+									<a href="about.html" target="_blank">关于我们</a>
 								</li>
 								<li valign="left" style="float:right;">
 									<a href="../user/login.html">登录  | 注册</a>
@@ -55,55 +56,14 @@
 					</div>
 				</div>
 			</header>
-			<p></p>
-			<div class="wap-container">
-				<div class="container ui-sortable">
-					<div class="panel panel-default">
-						<div class="panel-header">登录</div>
-						<div class="panel-body">
-							<form action="" method="post" class="form form-horizontal responsive" id="demoform">
-								<div class="row cl">
-									<label class="form-label col-xs-3">用户名：</label>
-									<div class="formControls col-xs-8">
-										<input type="text" class="input-text" placeholder="4~16个字符，字母/中文/数字/下划线" name="username" id="username">
-									</div>
-								</div>
 
-								<div class="row cl">
-									<label class="form-label col-xs-3">密码：</label>
-									<div class="formControls col-xs-8">
-										<input type="password" class="input-text" autocomplete="off" placeholder="密码" name="password" id="password">
-									</div>
-								</div>
+			<div class="container ui-sortable">
+				
+				<div class="wap-container">
 
-								<div class="row cl">
-									<div class="col-xs-8 col-xs-offset-3">
-										<span>
-										<input class="btn btn-primary" type="submit" value="&nbsp;&nbsp;登录&nbsp;&nbsp;">
-										</span>
-										<span>
-										<input class="btn btn-primary" type="button" name="Submit" onclick="javascript:history.back(-1);" value="&nbsp;&nbsp;返回上一页&nbsp;&nbsp;">
-										</span>
-									</div>
-								</div>
-							</form>
-							<form action="" method="post" class="form form-horizontal responsive" id="demoform">
-								<div class="row cl">
-									<div class="col-xs-8 col-xs-offset-3">
-									</div>
-								</div>
-							</form>
-						</div>
-						<div class="panel-header">
-							<a id='reg' href="reg.html">注册账号</a> <span class="spliter">|</span>
-							<a id='forgetPassword' href="forget_password.html">忘密码，找回密码?</a>
-						</div>
-						<form action="" method="post" class="form form-horizontal responsive" id="demoform">
-						</form>
-					</div>
+					
 				</div>
 			</div>
-		</div>
 		</div>
 
 		<script type="text/javascript" src="../../ui-frame/lib/jquery/1.9.1/jquery.min.js"></script>
@@ -136,6 +96,15 @@
 					interTime: 3000,
 					pnLoop: false,
 					titOnClassName: "active"
+				});
+
+				$(".panel").Huifold({
+					titCell: '.panel-header',
+					mainCell: '.panel-body',
+					type: 1,
+					trigger: 'click',
+					className: "selected",
+					speed: "first",
 				});
 
 				//邮箱提示	
