--- a/source/html/main/user/forget_password.html
+++ b/source/html/main/user/forget_password.html
@@ -37,16 +37,16 @@
 						<nav class="nav navbar-nav nav-collapse" role="navigation" id="Hui-navbar">
 							<ul class="cl">
 								<li>
-									<a href="index.html" target="_blank">首页</a>
+									<a href="../../index.html" target="_blank">首页</a>
 								</li>
 								<li>
-									<a href="main/blog/blog.html" target="_blank">博客</a>
+									<a href="../blog/blog.html" target="_blank">博客</a>
 								</li>
 								<li>
 									<a href="#src/about/" target="_blank">关于我们</a>
 								</li>
 								<li valign="left" style="float:right;">
-									<a href="main/user/login.html">登录  | 注册</a>
+									<a href="login.html">登录  | 注册</a>
 								</li>
 							</ul>
 						</nav>
